storage api rebuild